--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,16 +28,27 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir:'libs',include:['*.jar'])
-    implementation 'de.hdodenhof:circleimageview:2.1.0'
-    //noinspection GradleCompatible
-    implementation 'com.android.support:design:24.2.1'
-    //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+
+//    implementation fileTree(dir:'libs',include:['*.jar'])
+//    implementation 'de.hdodenhof:circleimageview:2.1.0'
+//    //noinspection GradleCompatible
+//    //implementation 'com.android.support:design:24.2.1'
+//    //noinspection GradleCompatible
+//    //implementation 'com.android.support:appcompat-v7:28.0.0'
+//    implementation 'androidx.appcompat:appcompat:1.5.1'
+//    implementation 'com.google.android.material:material:1.7.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+//    //testImplementation 'junit:junit:4.13.2'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
 }
